--- a/src/roles.html
+++ b/src/roles.html
@@ -15,20 +15,18 @@
 		<script src="../../jQuery/ui/jquery-ui-1.8.23.custom.min.js"></script>
 		<script src="../../jQuery/plugins/jquery.blockUI.js"></script>
 		
-		<!-- 3rd Party Imports -->
-		<script src="../../libs/base64/base64.js"></script>
-		
 		<!-- DF Imports -->
-		<script src="../../dfcore/dfapi.js"></script>
-		<script src="../../dfcore/jquery.dfcore.js"></script>
+		<script src="../../dfcore/dfio.js"></script>
 		<script src="../../dfcore/jquery.dfpager.js"></script>
-		<script src="../../dfcore/jquery.dfpagerui.js"></script>
-		<script src="admin.js"></script>
+		
+		<!-- DF Admin -->
+		<script src="js/admin.js"></script>
+		<script src="js/jquery.dfpagerui.js"></script>
 		
 		<!-- Initialize the system and start the application -->
 		<script>
+		
 	var isPageDirty = false;
-	
 	var current_roles = null;
 	var selected_role = -1;
 	var selected_role_id = -1;
@@ -46,7 +44,7 @@
 		con.html('');
 		con.append('<option value="">System Level Roles</option>');
 		for(var i in apps) {
-			con.append('<option value="'+apps[i].getId()+'">'+apps[i].getName()+'</option>');
+			con.append('<option value="'+apps[i].Id+'">'+apps[i].Name+'</option>');
 		}
 	}
 	
@@ -73,8 +71,8 @@
 	
 	function renderRoles(container,roles) {
 		for(var i in roles) {
-			makeRoleButton(i,roles[i].getName(),container);
-			if(selected_role_id > -1 && parseInt(roles[i].getId()) == selected_role_id) {
+			makeRoleButton(i,roles[i].Name,container);
+			if(selected_role_id > -1 && parseInt(roles[i].Id) == selected_role_id) {
 				selected_role = i;
 				selected_role_id = -1;
 			}
@@ -88,8 +86,8 @@
 		var con = $('#role_selector');
 		con.html('');
 		for(var i in roles) {
-			makeRoleButton(i,roles[i].getName(),con);
-			if(selected_role_id > -1 && parseInt(roles[i].getId()) == selected_role_id) {
+			makeRoleButton(i,roles[i].Name,con);
+			if(selected_role_id > -1 && parseInt(roles[i].Id) == selected_role_id) {
 				selected_role = i;
 				selected_role_id = -1;
 			}
@@ -108,8 +106,8 @@
 			} else {
 				$('#ROLE_'+i).button( "option", "icons", {primary: roleIconPrimary(role), secondary:''} );
 			}
-			if($('#DFRoleLabel_'+i).html() != role.getName()) {
-				$('#DFRoleLabel_'+i).html(role.getName());
+			if($('#DFRoleLabel_'+i).html() != role.Name) {
+				$('#DFRoleLabel_'+i).html(role.Name);
 			}
 		}
 	}
@@ -119,57 +117,56 @@
 	function showRole(role) {
 		selectRole = role;
 		if(role) {
-			showApp(role.getAppId());
+			showApp(role.AppId);
 			$('#appId').attr('disabled', 'disabled');
-			$('#rName').val(role.getName());
-			$('#rDescription').val(role.getDescription());
-			if(role.getCreateRecords()) {
+			$('#rName').val(role.Name);
+			$('#rDescription').val(role.Description);
+			if(role.CreateRecords == 'true') {
 				$('#rcreate').attr(KEY_CHECKED,true).button(KEY_REFRESH);
 			} else {
 				$('#rcreate').removeAttr(KEY_CHECKED).button(KEY_REFRESH);
 			}
-			if(role.getReadRecords()) {
+			if(role.ReadRecords == 'true') {
 				$('#rread').attr(KEY_CHECKED,true).button(KEY_REFRESH);
 			} else {
 				$('#rread').removeAttr(KEY_CHECKED).button(KEY_REFRESH);
 			}
-			if(role.getUpdateRecords()) {
+			if(role.UpdateRecords == 'true') {
 				$('#rupdate').attr(KEY_CHECKED,true).button(KEY_REFRESH);
 			} else {
 				$('#rupdate').removeAttr(KEY_CHECKED).button(KEY_REFRESH);
 			}
-			if(role.getDeleteRecords()) {
+			if(role.DeleteRecords == 'true') {
 				$('#rdelete').attr(KEY_CHECKED,true).button(KEY_REFRESH);
 			} else {
 				$('#rdelete').removeAttr(KEY_CHECKED).button(KEY_REFRESH);
 			}
-			if(role.getAdminUsers()) {
+			if(role.AdminUsers == 'true') {
 				$('#auser').attr(KEY_CHECKED,true).button(KEY_REFRESH);
 			} else {
 				$('#auser').removeAttr(KEY_CHECKED).button(KEY_REFRESH);
 			}
-			if(role.getReadUsers()) {
+			if(role.ReadUsers == 'true') {
 				$('#ruser').attr(KEY_CHECKED,true).button(KEY_REFRESH);
 			} else {
 				$('#ruser').removeAttr(KEY_CHECKED).button(KEY_REFRESH);
 			}
-			if(role.getAdminRoles()) {
+			if(role.AdminRoles == 'true') {
 				$('#roadmin').attr(KEY_CHECKED,true).button(KEY_REFRESH);
 			} else {
 				$('#roadmin').removeAttr(KEY_CHECKED).button(KEY_REFRESH);
 			}
-			if(role.getAssignRoles()) {
+			if(role.AssignRoles == 'true') {
 				$('#roassign').attr(KEY_CHECKED,true).button(KEY_REFRESH);
 			} else {
 				$('#roassign').removeAttr(KEY_CHECKED).button(KEY_REFRESH);
 			}
-			if(role.getReadRoles()) {
+			if(role.ReadRoles == 'true') {
 				$('#roread').attr(KEY_CHECKED,true).button(KEY_REFRESH);
 			} else {
 				$('#roread').removeAttr(KEY_CHECKED).button(KEY_REFRESH);
 			}
 			
-			//$('#saveLabel').html('Save Role');
 			$('#save').button({ disabled: true });
 			
 		} else {
@@ -187,7 +184,6 @@
 			$('#roassign').removeAttr(KEY_CHECKED).button(KEY_REFRESH);
 			$('#roadmin').removeAttr(KEY_CHECKED).button(KEY_REFRESH);
 			
-			//$('#saveLabel').html('Add New Role');
 			$('#save').button({ disabled: false });
 		}
 		
@@ -208,21 +204,12 @@
 		$('#rolesList').dfPagerUI('disableAll');
 	}
 	
-	function scrollToCurrent() {
-		if(selected_role != -1) {
-			var container = $('.scrollablePane'), scrollTo = $("#ROLE_"+selected_role);
-			container.animate({
-				scrollTop: scrollTo.offset().top - container.offset().top + container.scrollTop()
-			});
-		}
-	}
-	
 	function roleIconPrimary(role) {
 		if(role.isDirty) {
 			if(!isListDirty) isListDirty = true;
 			return 'ui-icon-alert';
 		} else {
-			if(role.getAppId()) {
+			if(role.AppId) {
 				return 'ui-icon-wrench';
 			} else {
 				return 'ui-icon-gear';
@@ -234,21 +221,20 @@
 		showRole(-1);
 	}
 	
-	var save_role_request = {
+	var roleio = new DFRequest({
 		app: 'admin',
-		sys: true,
-		table: 'Role',
+		service: 'System',
+		resource: '/Role',
 		type: DFRequestType.POST,
 		success: function(xml) {
 			var errorMsg = checkFailure(xml);
 			if(errorMsg) {
 				$('#errorMsg').html(errorMsg);
 				$('#errorDialog').dialog('open');
-			} else {
+			} else {selectRole
 				$('#save').button({ disabled: true });
 				$('#rolesList').dfPager('fetch');
 			}
-			navControl(true);
 			$("#save").button({ disabled: true });
 			$('#rolesList').dfPagerUI('enableAll');
 			$('#savingDialog').dialog('close');
@@ -258,51 +244,19 @@
 			$('#errorMsg').html(err);
 			$('#errorDialog').dialog('open');
    		}
-	};
+	});
 	
-	var get_roles_request = {
+	var appio = new DFRequest({
 		app: 'admin',
-		sys: true,
-		table: 'Role',
+		service: "System",
+		resource: '/App',
 		success: function(json) {
 			var errorMsg = checkFailure(json);
 			if(errorMsg) {
 				$('#errorMsg').html(errorMsg);
 				$('#errorDialog').dialog('open');
 			} else {
-				current_roles = [];
-				for(var i in json.record) {
-					current_roles[current_roles.length] = new Role(json.record[i].fields);
-				}
-				showRoles(current_roles);
-				showRole(selected_role);
-				$('#savingDialog').dialog('close');
-				$('#save').button({ disabled: false });
-				scrollToCurrent();
-			}
-		},
-		error: function(err) {
-			$('#savingDialog').dialog('close');
-			$('#save').button({ disabled: false });
-			$('#errorMsg').html(err);
-			$('#errorDialog').dialog('open');
-   		}
-	};
-	
-	var get_apps_request = {
-		app: 'admin',
-		sys: true,
-		table: 'App',
-		success: function(json) {
-			var errorMsg = checkFailure(json);
-			if(errorMsg) {
-				$('#errorMsg').html(errorMsg);
-				$('#errorDialog').dialog('open');
-			} else {
-				current_apps = [];
-				for(var i in json.record) {
-					current_apps[current_apps.length] = new Application(json.record[i].fields);
-				}
+				current_apps = CommonUtilities.flattenResponse(json);
 				showApps(current_apps);
 				showApp(-1);
 			}
@@ -311,83 +265,36 @@
 			$('#errorMsg').html(err);
 			$('#errorDialog').dialog('open');
    		}
-	};
-	
-	function refreshList(confirmed) {
-		if(isListDirty && !confirmed) {
-			$( "#confirmDialog" ).dialog( "open" );
-		} else {
-			clearRole();
-			$('#save').button({ disabled: true });
-			$('#role_selector').html('<div align="center"><i>&lt; Loading, Please Wait...&gt;</i></div>');
-			new DFRequest(get_apps_request).start();
-			new DFRequest(get_roles_request).start();
-		}
-	}
+	});
 	
 	function deleteRole(confirmed) {
 		if(selectRole) {
 			if(confirmed) {
-				var req = {Ids:selectRole.getId()};
-				var newObject = jQuery.extend(true, {}, save_role_request);
-				newObject.action = DFRequestActions.DELETE;
-				newObject.data = JSON.stringify(req);
-				new DFRequest(newObject).makeRequest();
+				roleio.deletes(selectRole.Id);
 			} else {
-				$( "#deleteRole" ).html(selectRole.getName());
+				$( "#deleteRole" ).html(selectRole.Name);
 				$( "#confirmDeleteRoleDialog" ).dialog('open');
 			}
 		}
 	}
 	
-	function createRole() {
-		
-		var role = new Role({});
-		role.setAppId($('select#appId option:selected').val());
-		role.setName($('#rName').val());
-		role.setDescription($('#rDescription').val());
-		role.setCreateRecords($('#rcreate').attr('checked')=='checked');
-		role.setReadRecords($('#rread').attr('checked')=='checked');
-		role.setUpdateRecords($('#rupdate').attr('checked')=='checked');
-		role.setDeleteRecords($('#rdelete').attr('checked')=='checked');
-		role.setAdminUsers($('#auser').attr('checked')=='checked');
-		role.setReadUsers($('#ruser').attr('checked')=='checked');
-		role.setAdminRoles($('#roadmin').attr('checked')=='checked');
-		role.setAssignRoles($('#roassign').attr('checked')=='checked');
-		role.setReadRoles($('#roread').attr('checked')=='checked');
-		
-		var newObject = jQuery.extend(true, {}, save_role_request);
-		newObject.action = DFRequestActions.CREATE;
-		newObject.data = JSON.stringify({records:{record: [{fields:role.getJSON()}]}});
-		new DFRequest(newObject).makeRequest();
+	function processForm(role) {
+		role.Name = $('#rName').val();
+		role.Description = $('#rDescription').val();
+		role.CreateRecords = $('#rcreate').attr('checked')=='checked';
+		role.ReadRecords = $('#rread').attr('checked')=='checked';
+		role.UpdateRecords = $('#rupdate').attr('checked')=='checked';
+		role.DeleteRecords = $('#rdelete').attr('checked')=='checked';
+		role.AdminUsers = $('#auser').attr('checked')=='checked';
+		role.ReadUsers = $('#ruser').attr('checked')=='checked';
+		role.AdminRoles = $('#roadmin').attr('checked')=='checked';
+		role.AssignRoles = $('#roassign').attr('checked')=='checked';
+		role.ReadRoles = $('#roread').attr('checked')=='checked';
 	}
-	
-	function updateRole(role) {
-		
-		role.setName($('#rName').val());
-		role.setDescription($('#rDescription').val());
-		role.setCreateRecords($('#rcreate').attr('checked')=='checked');
-		role.setReadRecords($('#rread').attr('checked')=='checked');
-		role.setUpdateRecords($('#rupdate').attr('checked')=='checked');
-		role.setDeleteRecords($('#rdelete').attr('checked')=='checked');
-		role.setAdminUsers($('#auser').attr('checked')=='checked');
-		role.setReadUsers($('#ruser').attr('checked')=='checked');
-		role.setAdminRoles($('#roadmin').attr('checked')=='checked');
-		role.setAssignRoles($('#roassign').attr('checked')=='checked');
-		role.setReadRoles($('#roread').attr('checked')=='checked');
-		
-		var newObject = jQuery.extend(true, {}, save_role_request);
-		newObject.action = DFRequestActions.UPDATE;
-		newObject.data = JSON.stringify({records:{record: [{fields:role.getJSON()}]}});
-		new DFRequest(newObject).makeRequest();
-	}
-	
 	
 	$(document).ready(function() {
 		
-		$(document).ajaxStart($.blockUI).ajaxStop($.unblockUI);
-		
-		$().dfcore();
+		//$(document).ajaxStart($.blockUI).ajaxStop($.unblockUI);
 		
 		var current_button = 'roles';
 		makeAdminNav(current_button);
@@ -402,9 +309,12 @@
 		
 		$("#save").button({icons: {primary: "ui-icon-disk"}}).click(function(){
 			if(selectRole) {
-				updateRole(selectRole);
+				processForm(selectRole);
+				roleio.update(selectRole);
 			} else {
-				createRole();
+				var role = {};
+				processForm(role);
+				roleio.create(role);
 			}
 		});
 		
@@ -468,12 +378,12 @@
 		$( "#admingroup" ).buttonset();
 		$( "#rolesgroup" ).buttonset();
 		
-		new DFRequest(get_apps_request).makeRequest();
+		appio.retrieve();
 		
 		$('#rolesList').dfPagerUI({
 			app: 'admin',
-			sys: true,
-			table: 'Role',
+			service: "System",
+			resource: '/Role',
 			pageNo: 0,
 			pageLimit: 1,
 			pageLimits: [10,25,50,100],
@@ -481,12 +391,7 @@
 			orderFields: ['Id','AppId','Name'],
 			renderer: function(container,json) {
 				showRole(null);
-				var roles = [];
-				
-				for(var i in json.record) {
-					roles[roles.length] = new Role(json.record[i].fields);
-				}
-				
+				var roles = CommonUtilities.flattenResponse(json);
 				if(roles.length > 0) {
 					current_roles = roles;
 					renderRoles(container,roles);
